Add snapshot tests

--- a/solutions/devsprint-willian-policiano-1/FinanceApp.xcodeproj/xcshareddata/xcschemes/FinanceApp.xcscheme
+++ b/solutions/devsprint-willian-policiano-1/FinanceApp.xcodeproj/xcshareddata/xcschemes/FinanceApp.xcscheme
@@ -39,6 +39,16 @@
                ReferencedContainer = "container:FinanceApp.xcodeproj">
             </BuildableReference>
          </TestableReference>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "B046659427F67B0900712FB0"
+               BuildableName = "FinanceAppUITests.xctest"
+               BlueprintName = "FinanceAppUITests"
+               ReferencedContainer = "container:FinanceApp.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
