--- a/solutions/devsprint-caio-santos-5/project.yml
+++ b/solutions/devsprint-caio-santos-5/project.yml
@@ -3,8 +3,11 @@ options:
   bundleIdPrefix: com.devpass
   deploymentTarget:
     iOS: 15.2
-  postGenCommand: pod install
-
+  # postGenCommand: pod install
+packages:
+  SnapshotTesting:
+    url: https://github.com/pointfreeco/swift-snapshot-testing.git
+    from: 1.9.0
 targets:
   FinanceApp:
     type: application
@@ -23,7 +26,7 @@ targets:
     settings:
       configs:
         Debug:
-          ONLY_ACTIVE_ARCH: NO
+          ONLY_ACTIVE_ARCH: YES
     info:
       path: FinanceApp/Resources/Info.plist
       properties:
@@ -44,10 +47,10 @@ targets:
       - path: FinanceAppTests
         includes:
           - "**/*.swift"
-
     settings:
       TEST_HOST: "$(BUILT_PRODUCTS_DIR)/FinanceApp.app/FinanceApp"
-
+    dependencies:
+      - package: SnapshotTesting
     info:
       path: FinanceAppTests/Info.plist
 
